# ChangeLog for dev-cpp/gflags
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.13 2011/09/01 15:39:35 nelchael Exp $

*gflags-1.6 (01 Sep 2011)

  01 Sep 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.4.ebuild,
  +gflags-1.6.ebuild:
  Version bump.

*gflags-1.5 (12 Feb 2011)

  12 Feb 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.2.ebuild,
  +gflags-1.5.ebuild:
  Version bump.

  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> metadata.xml:
  Improve metadata: add no-herd and my name.

*gflags-1.4 (08 Nov 2010)

  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.4.ebuild,
  metadata.xml:
  Version bump, Python library has been split off to separate package:
  dev-python/python-gflags.

  09 Jul 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update metadata.xml. antarus is staffer now (#119161)

  29 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gflags-1.2.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #312131).

*gflags-1.2 (14 Sep 2009)

  14 Sep 2009; Tiziano Müller <dev-zero@gentoo.org> +gflags-1.2.ebuild:
  Version bump.

*gflags-1.1 (30 Apr 2009)

  30 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> gflags-0.8.ebuild,
  +gflags-1.1.ebuild:
  Version bump (including eapi-2 and python conditional-depend fix).

*gflags-0.8 (16 Jun 2008)

  16 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> +gflags-0.8.ebuild:
  Version bump (bug #218802, fixes bug #227473)

  10 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
  distutils fix from dev-zero

  09 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
  remove mirror://, it was wrong anyway

  09 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
  Thanks to leio for pointing out I'm retarded and didn't specify an SRC_URI

*gflags-0.7 (09 Mar 2008)

  09 Mar 2008; Alec Warner <antarus@gentoo.org> +metadata.xml,
  +gflags-0.7.ebuild: