@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/gflags-1.5.ebuild,v 1.1 2011/02/12 21:54:14 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/gflags-1.5.ebuild,v 1.2 2011/11/11 20:55:37 vapier Exp $
 
 EAPI="3"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://code.google.com/p/google-gflags/"
 SRC_URI="http://google-gflags.googlecode.com/files/${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~arm ~x86"
 IUSE="static-libs"
 
 DEPEND=""
