@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/gflags
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.13 2011/09/01 15:39:35 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.14 2011/11/11 20:55:37 vapier Exp $
+
+  11 Nov 2011; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
+  gflags-1.6.ebuild:
+  Add arm love.
 
 *gflags-1.6 (01 Sep 2011)
 
